--- a/no.tiwas.boolerantoolbox/app.json
+++ b/no.tiwas.boolerantoolbox/app.json
@@ -1,12 +1,12 @@
 {
   "id": "no.tiwas.booleantoolbox",
+  "version": "1.0.0",
+  "compatibility": ">=5.0.0",
+  "sdk": 3,
   "name": {
     "en": "Boolean Toolbox",
     "nb": "Boolean Toolbox"
   },
-  "version": "1.0.0",
-  "compatibility": ">=5.0.0",
-  "sdk": 3,
   "author": {
     "name": "Lars Kvanum"
   },
@@ -15,66 +15,204 @@
     "en": "Create advanced, state-aware logic units for your flows.",
     "nb": "Lag avanserte, tilstandsbevisste logiske enheter for dine flows."
   },
-  "drivers": [
-    {
-      "id": "logic-unit",
-      "name": {
-        "en": "Logic Unit",
-        "nb": "Logisk Enhet"
-      },
-      "class": "tool",
-      "images": {
-        "small": "/drivers/logic-unit/assets/images/small.png",
-        "large": "/drivers/logic-unit/assets/images/large.png"
-      },
-      "flow": {
-        "triggers": [
+  "flow": {
+    "triggers": [
+      {
+        "id": "output_true",
+        "title": {
+          "en": "Output becomes true",
+          "nb": "Resultatet blir sant"
+        },
+        "args": [
           {
-            "id": "output_true"
-          },
-          {
-            "id": "output_false"
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
           }
-        ],
-        "conditions": [
+        ]
+      },
+      {
+        "id": "output_false",
+        "title": {
+          "en": "Output becomes false",
+          "nb": "Resultatet blir usant"
+        },
+        "args": [
           {
-            "id": "output_is_true"
-          }
-        ],
-        "actions": [
-          {
-            "id": "set_input_a_true"
-          },
-          {
-            "id": "set_input_a_false"
-          },
-          {
-            "id": "set_input_b_true"
-          },
-          {
-            "id": "set_input_b_false"
-          },
-          {
-            "id": "set_input_c_true"
-          },
-          {
-            "id": "set_input_c_false"
-          },
-          {
-            "id": "set_input_d_true"
-          },
-          {
-            "id": "set_input_d_false"
-          },
-          {
-            "id": "set_input_e_true"
-          },
-          {
-            "id": "set_input_e_false"
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
           }
         ]
       }
+    ],
+    "conditions": [
+      {
+        "id": "output_is_true",
+        "title": {
+          "en": "Output is true",
+          "nb": "Resultatet er sant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      }
+    ],
+    "actions": [
+      {
+        "id": "set_input_a_true",
+        "title": {
+          "en": "Set input A to true",
+          "nb": "Sett inngang A til sant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_a_false",
+        "title": {
+          "en": "Set input A to false",
+          "nb": "Sett inngang A til usant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_b_true",
+        "title": {
+          "en": "Set input B to true",
+          "nb": "Sett inngang B til sant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_b_false",
+        "title": {
+          "en": "Set input B to false",
+          "nb": "Sett inngang B til usant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_c_true",
+        "title": {
+          "en": "Set input C to true",
+          "nb": "Sett inngang C til sant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_c_false",
+        "title": {
+          "en": "Set input C to false",
+          "nb": "Sett inngang C til usant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_d_true",
+        "title": {
+          "en": "Set input D to true",
+          "nb": "Sett inngang D til sant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_d_false",
+        "title": {
+          "en": "Set input D to false",
+          "nb": "Sett inngang D til usant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_e_true",
+        "title": {
+          "en": "Set input E to true",
+          "nb": "Sett inngang E til sant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      },
+      {
+        "id": "set_input_e_false",
+        "title": {
+          "en": "Set input E to false",
+          "nb": "Sett inngang E til usant"
+        },
+        "args": [
+          {
+            "name": "device",
+            "type": "device",
+            "filter": "driver_id=logic-unit"
+          }
+        ]
+      }
+    ]
+  },
+  "images": [
+    {
+      "type": "large",
+      "path": "/assets/images/promo_large.jpg"
+    },
+    {
+      "type": "small",
+      "path": "/assets/images/promo_small.jpg"
     }
   ]
 }
-
