--- a/no.tiwas.booleantoolbox/package.json
+++ b/no.tiwas.booleantoolbox/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "no.tiwas.booleantoolbox2",
-  "version": "1.0.0",
+  "name": "no.tiwas.booleantoolbox",
+  "version": "0.1.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
