--- a/no.tiwas.booleantoolbox/package.json
+++ b/no.tiwas.booleantoolbox/package.json
@@ -1,12 +1,15 @@
 {
   "name": "no.tiwas.booleantoolbox",
-  "version": "0.1.0",
-  "main": "index.js",
+  "version": "1.1.1",
+  "main": "app.js",
+  "dependencies": {
+    "athom-api": "^3.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lars Kvanum",
   "license": "ISC",
   "description": ""
 }
